Show recipe by url parameter

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" type="text/css" href="./css/croppie.min.css"/>
     <script type="text/javascript" src="./js/croppie.min.js"></script>
 
+    <!-- Clipboard to copy links to clipboard -->
+    <script type="text/javascript" src="./js/clipboard.min.js"></script>
+
     <!-- Firebase of course -->
     <script type="text/javascript" src="./js/firebase.js"></script>
     <script type="text/javascript" src="./js/firebase-app.js"></script>
@@ -90,11 +93,10 @@
 <div class="card recipe">
     <div class="card-header" id="recipe-{{ id }}">
         <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne-{{ id }}" aria-expanded="false" aria-controls="collapseOne">
-            {{ title }}
-        </button>
-        <button class="recipe-remove btn btn-link float-right fa fa-trash" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
-        <button class="recipe-edit btn btn-link float-right fa fa-edit" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
+            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne-{{ id }}" aria-expanded="false" aria-controls="collapseOne">{{ title }}</button>
+            <button title="Rezept löschen" class="recipe-remove btn btn-link float-right fa fa-trash" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
+            <button title="Rezept editieren" class="recipe-edit btn btn-link float-right fa fa-edit" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
+            <button title="Rezept-Link kopieren" class="recipe-link btn btn-link float-right fa fa-clipboard" data-clipboard-text="{{ link }}"></button>
         </h5>
     </div>
     <div id="collapseOne-{{ id }}" class="collapse" aria-labelledby="recipe-{{ id }}" data-parent="#recipesListContainer">
