--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <link rel="shortcut icon" href="./favicon.ico">
 
     <!-- JQuery -->
-    <script src="./js/jquery-3.2.1.slim.min.js"></script>
+    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/jquery.session.js"></script>
+    <script src="./js/jquery.cookie.js"></script>
     
     <!-- Bootstrap -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -30,16 +32,9 @@
     <!-- Clipboard to copy links to clipboard -->
     <script type="text/javascript" src="./js/clipboard.min.js"></script>
 
-    <!-- Firebase of course -->
-    <script type="text/javascript" src="./js/firebase.js"></script>
-    <script type="text/javascript" src="./js/firebase-app.js"></script>
-    <script type="text/javascript" src="./js/firebase-auth.js"></script>
-    <script type="text/javascript" src="./js/firebase-firestore.js"></script>
-    <script type="text/javascript" src="./js/firebase-storage.js"></script>
-
     <!-- The custom stuff -->
     <script type="text/javascript" src="./js/config.js"></script>
-    <script type="text/javascript" src="./js/firebasebackend.js"></script>
+    <script type="text/javascript" src="./js/sinatrabackend.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/rezepte.css"/>
     <script type="text/javascript" src="./js/rezepte.js"></script>
 
