--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,9 @@
                 <div class="alphabet-item noentries"><span>Y</span></div>
                 <div class="alphabet-item noentries"><span>Z</span></div>
             </div>
+            <div>
+                <button title="Rezepte exportieren" id="recipes-export" class="btn btn-link float-right fa fa-download"></button>    
+            </div>
         </div>
     </div>
 
