--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,8 @@
                 <div class="alphabet-item noentries"><span>Z</span></div>
             </div>
             <div>
-                <button title="Rezepte exportieren" id="recipes-export" class="btn btn-link float-right fa fa-download"></button>    
+                <button title="Rezepte exportieren" id="recipes-export" class="btn btn-link float-right fa fa-download"></button>
+                <button title="Rezepte importieren" id="recipes-import" class="btn btn-link float-right fa fa-upload"></button>    
             </div>
         </div>
     </div>
@@ -190,5 +191,34 @@
         </div>
     </div>
 </div>
+</script>
+
+<script type="text/template" id="tplImportSecrets">
+    <div class="modal-body">
+        <label for="content">Please insert a valid JSON list like the example below.</label>
+        <form id="formImportSecrets" class="form-horizontal">
+            <div class="form-group">
+                <textarea id="content" class="form-control"
+                    data-data-field="content"
+                    rows=10>
+[
+  {
+    "title": "Rezept Titel",
+    "content": "Zutatenliste",
+    "description": "Beschreibung"
+  }
+]
+                </textarea>
+            </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-default"
+                data-dismiss="modal">Close
+        </button>
+        <button id="btnSaveImports" type="button"
+                class="btn btn-primary">Save Imports
+        </button>
+    </div>
 </script>
 </html>
