--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
                 <div class="alphabet-item noentries"><span>Y</span></div>
                 <div class="alphabet-item noentries"><span>Z</span></div>
             </div>
-            <div>
+            <div class="d-none d-xl-block">
                 <button title="Rezepte exportieren" id="recipes-export" class="btn btn-link float-right fa fa-download"></button>
                 <button title="Rezepte importieren" id="recipes-import" class="btn btn-link float-right fa fa-upload"></button>    
             </div>
@@ -93,9 +93,10 @@
     <div class="card-header" id="recipe-{{ id }}">
         <h5 class="mb-0">
             <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne-{{ id }}" aria-expanded="false" aria-controls="collapseOne">{{ title }}</button>
+            <button title="Rezept-Link kopieren" class="recipe-link btn btn-link float-right fa fa-clipboard d-none d-sm-block" data-clipboard-text="{{ link }}"></button>
             <button title="Rezept löschen" class="recipe-remove btn btn-link float-right fa fa-trash" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
+            <button title="Rezept klonen" class="recipe-clone btn btn-link float-right fa fa-clone d-none d-sm-block" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
             <button title="Rezept editieren" class="recipe-edit btn btn-link float-right fa fa-edit" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
-            <button title="Rezept klonen" class="recipe-clone btn btn-link float-right fa fa-clone" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
 
             <!-- This functionality is unused -->
             <!-- <button title="Rezept-Link kopieren" class="recipe-link btn btn-link float-right fa fa-clipboard" data-clipboard-text="{{ link }}"></button> -->
