--- a/public/index.html
+++ b/public/index.html
@@ -70,13 +70,6 @@
                 <div class="alphabet-item noentries"><span>Y</span></div>
                 <div class="alphabet-item noentries"><span>Z</span></div>
             </div>
-            <div>
-                <button title="Logout" id="sign-out" class="btn btn-link float-right fa fa-sign-out"></button>
-            </div>
-            <div class="d-none d-xl-block">
-                <button title="Rezepte exportieren" id="recipes-export" class="btn btn-link float-right fa fa-download"></button>
-                <button title="Rezepte importieren" id="recipes-import" class="btn btn-link float-right fa fa-upload"></button>    
-            </div>
         </div>
     </div>
 
@@ -87,6 +80,17 @@
         </div>
         <div class="row">
             <div id="recipeNewContainer" class="col mx-auto">
+            </div>
+        </div>
+    </div>
+    <div class="container fixed-bottom">
+        <div class="row">
+            <div>
+                <button title="Logout" id="sign-out" class="btn btn-link float-right fa fa-sign-out"></button>
+            </div>
+            <div class="d-none d-xl-block">
+                <button title="Rezepte exportieren" id="recipes-export" class="btn btn-link float-right fa fa-download"></button>
+                <button title="Rezepte importieren" id="recipes-import" class="btn btn-link float-right fa fa-upload"></button>    
             </div>
         </div>
     </div>
