--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
             </div>
         </div>
     </div>
-    <div class="container fixed-bottom">
+    <div class="container bottom">
         <div class="row">
             <div>
                 <button title="Logout" id="sign-out" class="btn btn-link float-right fa fa-sign-out"></button>
