--- a/public/index.html
+++ b/public/index.html
@@ -99,8 +99,8 @@
 <div class="card recipe">
     <div class="card-header" id="recipe-{{ id }}">
         <h5 class="mb-0">
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne-{{ id }}" aria-expanded="false" aria-controls="collapseOne">{{ title }}</button>
-            <span class="author d-none d-sm-block">{{ author }}</span>
+            <button class="btn btn-link float-left" data-toggle="collapse" data-target="#collapseOne-{{ id }}" aria-expanded="false" aria-controls="collapseOne">{{ title }}</button>
+            <span class="author d-none d-sm-block float-left">{{ author }}</span>
             <button title="Rezept-Link kopieren" class="recipe-link btn btn-link float-right fa fa-clipboard d-none d-sm-block" data-clipboard-text="{{ link }}"></button>
             <button title="Rezept löschen" class="recipe-remove btn btn-link float-right fa fa-trash" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
             <button title="Rezept klonen" class="recipe-clone btn btn-link float-right fa fa-clone d-none d-sm-block" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
