--- a/public/index.html
+++ b/public/index.html
@@ -95,11 +95,14 @@
         </div>
     </div>
 </body>
+
+<!-- Templates -->
+
 <script id="recipe-template" type="x-tmpl-mustache">
 <div class="card recipe">
-    <div class="card-header" id="recipe-{{ id }}">
+    <div class="card-header" id="recipe-{{ id }}" data-toggle="collapse" data-target="#collapseOne-{{ id }}" aria-expanded="false" aria-controls="collapseOne">
         <h5 class="mb-0">
-            <button class="btn btn-link float-left" data-toggle="collapse" data-target="#collapseOne-{{ id }}" aria-expanded="false" aria-controls="collapseOne">{{ title }}</button>
+            <button class="btn btn-link float-left">{{ title }}</button>
             <span class="author d-none d-sm-block float-left">{{ author }}</span>
             <button title="Rezept-Link kopieren" class="recipe-link btn btn-link float-right fa fa-clipboard d-none d-sm-block" data-clipboard-text="{{ link }}"></button>
             <button title="Rezept löschen" class="recipe-remove btn btn-link float-right fa fa-trash" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
