--- a/public/index.html
+++ b/public/index.html
@@ -103,11 +103,13 @@
     <div class="card-header" id="recipe-{{ id }}" data-toggle="collapse" data-target="#collapseOne-{{ id }}" aria-expanded="false" aria-controls="collapseOne">
         <h5 class="mb-0">
             <button class="recipe-title btn btn-link float-left">{{ title }}</button>
-            <button title="Rezept-Link kopieren" class="recipe-link btn btn-link float-right fa fa-clipboard d-none d-sm-block" data-clipboard-text="{{ link }}"></button>
-            <button title="Rezept löschen" class="recipe-remove btn btn-link float-right fa fa-trash" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
-            <button title="Rezept klonen" class="recipe-clone btn btn-link float-right fa fa-clone" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
-            <button title="Rezept editieren" class="recipe-edit btn btn-link float-right fa fa-edit" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
-            <span class="author d-none d-sm-block float-right">{{ author }}</span>
+            <div class="recipe-controls">
+                <button title="Rezept-Link kopieren" class="recipe-link btn btn-link float-right fa fa-clipboard d-none d-sm-block" data-clipboard-text="{{ link }}"></button>
+                <button title="Rezept löschen" class="recipe-remove btn btn-link float-right fa fa-trash" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
+                <button title="Rezept klonen" class="recipe-clone btn btn-link float-right fa fa-clone" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
+                <button title="Rezept editieren" class="recipe-edit btn btn-link float-right fa fa-edit" data-recipe-id="{{ id }}" data-recipe-title="{{ title }}"></button>
+                <span class="author d-none d-sm-block float-right">{{ author }}</span>
+            </div>
         </h5>
     </div>
     <div id="collapseOne-{{ id }}" class="collapse" aria-labelledby="recipe-{{ id }}" data-parent="#recipesListContainer">
