--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
 <script id="recipe-template" type="x-tmpl-mustache">
 <div class="card recipe">
     <div class="card-header" id="recipe-{{ id }}" data-toggle="collapse" data-target="#collapseOne-{{ id }}" aria-expanded="false" aria-controls="collapseOne">
-        <h5 class="mb-0">
+        <h5 class="recipe-header mb-0">
             <button class="recipe-title btn btn-link float-left">{{ title }}</button>
             <div class="recipe-controls">
                 <button title="Rezept-Link kopieren" class="recipe-link btn btn-link float-right fa fa-clipboard d-none d-sm-block" data-clipboard-text="{{ link }}"></button>
