--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0022)http://127.0.0.1:5000/ -->
-<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>meine Rezepte</title>
@@ -10,14 +14,14 @@
     <script src="./js/jquery-3.3.1.min.js"></script>
     <script src="./js/jquery.session.js"></script>
     <script src="./js/jquery.cookie.js"></script>
-    
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/bootbox.min.js"></script>
 
     <!-- Font Awesome for icons -->
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
 
     <!-- Mustache for HTML templates -->
     <script type="text/javascript" src="./js/mustache.min.js"></script>
@@ -26,7 +30,7 @@
     <script type="text/javascript" src="./js/marked.js"></script>
 
     <!-- Croppie for image scale and crop -->
-    <link rel="stylesheet" type="text/css" href="./css/croppie.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/croppie.min.css" />
     <script type="text/javascript" src="./js/croppie.min.js"></script>
 
     <!-- Clipboard to copy links to clipboard -->
@@ -35,10 +39,11 @@
     <!-- The custom stuff -->
     <script type="text/javascript" src="./js/config.js"></script>
     <script type="text/javascript" src="./js/sinatrabackend.js"></script>
-    <link rel="stylesheet" type="text/css" href="./css/rezepte.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/rezepte.css" />
     <script type="text/javascript" src="./js/rezepte.js"></script>
 
 </head>
+
 <body>
     <div class="container">
         <div class="row">
@@ -75,8 +80,14 @@
 
     <div class="container">
         <div class="row">
-            <ul id="tagsListContainer" class="tagsListContainer" class="col mx-auto">
-            </ul>
+            <div class="col" style="padding: 0px; margin: 0px;">
+                <ul id="tagsListContainer" class="tagsListContainer tagsHeadList">
+                </ul>
+            </div>
+            <div class="col-md-2" style="padding: 0px; margin: 0px;">
+                <input class="tag-new form-control" type="text" id="tag-new" value=""
+                    placeholder="Tag eingeben, dann ENTER">
+            </div>
         </div>
     </div>
 
@@ -97,8 +108,10 @@
                 <button title="Logout" id="sign-out" class="btn btn-link float-right fa fa-sign-out"></button>
             </div>
             <div class="d-none d-xl-block">
-                <button title="Rezepte exportieren" id="recipes-export" class="btn btn-link float-right fa fa-download"></button>
-                <button title="Rezepte importieren" id="recipes-import" class="btn btn-link float-right fa fa-upload"></button>    
+                <button title="Rezepte exportieren" id="recipes-export"
+                    class="btn btn-link float-right fa fa-download"></button>
+                <button title="Rezepte importieren" id="recipes-import"
+                    class="btn btn-link float-right fa fa-upload"></button>
             </div>
         </div>
     </div>
@@ -210,7 +223,7 @@
             </div>
             <div class="recipe-description-container">
                 <h6>Zutaten</h6>
-                <textarea id="recipe-new-description" class="form-control" placeholder="Zutaten (in MarkDown) optimalerweise mit einem '-' vor jeder Zeile"></textarea>
+                <textarea id="recipe-new-description" class="form-control" placeholder="Zutaten (in MarkDown) '- ' wird mit jeder neuen Zeile automatisch vorangestellt"></textarea>
             </div>
             <div class="recipe-content-container">
                 <h6>Zubereitung und sonstiges</h6>
@@ -229,7 +242,10 @@
 </script>
 
 <script id="tag-template" type="x-tmpl-mustache">
-    <li class="tag-list-item active"><a class="tag-list-item-link" data-tag-id="{{ id }}">{{ name }}</a></li>
+    <li class="tag-list-item active">
+        <a class="tag-list-item-link" data-tag-id="{{ id }}">{{ name }}</a>
+    </li>
+    <a class="tag-delete-item fa fa-trash" data-tag-id="{{ id }}"></a>
 </script>
 
 <script type="text/template" id="tplImportSecrets">
@@ -260,4 +276,5 @@
         </button>
     </div>
 </script>
+
 </html>
